<resources>
    <string name="app_name">My Note</string>
    <string name="search" />
    <string name="search_icon" />
    <string name="my_note">My Note</string>
    <string name="back_btn">back buttom</string>
    <string name="note_title">Note Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="type_note_here">Type note here...</string>
    <string name="floatactionbutton">FloatActionButton</string>
    <string name="like_icon">like_icon</string>
    <string name="pin">pin</string>
    <string name="delete" />
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mohab">Mohab</string>
    <string name="mohabzax4_gmail_com">MohabZax4@gmail.com</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="to_definethe_note_color">to definethe note color</string>
    <string name="to_define_the_note_color" />
</resources>