<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Home">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_note"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="-7dp"
            tools:layout_editor_absoluteY="29dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.035"
        android:orientation="horizontal"
        android:background="@drawable/search_background"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        >
        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/search_icon"
            app:tint="@color/white"
            android:contentDescription="@string/search_icon" />

        <EditText
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:inputType="text"
            android:layout_marginStart="12dp"
            android:hint="@string/search"
            android:background="@null"
            android:textColorHint="@color/white"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.0"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>