<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateNote"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="30dp"

                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.089"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/icons"
                android:contentDescription="@string/back_btn" />

            <ImageView
                android:id="@+id/done"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/circle"
                android:contentDescription="@string/back_btn"
                android:padding="4dp"

                android:src="@drawable/done"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.98"
                app:layout_constraintStart_toEndOf="@+id/back_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/icons" />

            <EditText
                android:id="@+id/create_note_title"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/note_title"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_btn"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/create_sub_title"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:hint="@string/sub_title"
                android:paddingVertical="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/shape"
                app:layout_constraintTop_toBottomOf="@id/create_note_title"  android:layout_width="match_parent"
                android:importantForAutofill="no"
                android:inputType="textAutoCorrect" />

            <View
                android:id="@+id/shape"
                android:layout_width="5dp"
                android:layout_height="0dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rect"
                app:layout_constraintBottom_toBottomOf="@id/create_sub_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/create_sub_title"
                />

            <EditText
                android:id="@+id/create_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp"
                android:inputType="textMultiLine"
                android:background="@null"
                android:gravity="top"
                android:minHeight="100dp"
                android:textColor="@color/white"
                android:hint="@string/type_note_here"
                android:textColorHint="@color/white"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@id/create_sub_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:importantForAutofill="no" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>